feat: add Windows certificate store signing support